--- a/Index.html
+++ b/Index.html
@@ -135,7 +135,7 @@
 
 
 
-    <!-- Collections 1 -->
+        <!-- Collections 1 -->
     <section id="collections" class="py-24 bg-warm-white">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16">
@@ -241,7 +241,6 @@
 
 
 
-    
 
     <!-- Featured Products 2 -->
     <section id="products" class="py-24 bg-cream">
@@ -260,7 +259,7 @@
                 <!-- Product 1 -->
                 <div class="carousel-item">
                     <div class="relative overflow-hidden">
-                        <img src="https://images.asos-media.com/products/dragon-diffusion-egola-woven-leather-shoulder-basket-bag-in-dark-brown/209527576-1-brown?$n_640w$&wid=513&fit=constrain" 
+                        <img src="imgs/496377271_30064989373115007_7903377445270836080_n.jpg" 
                              alt="Alpine Cashmere Sweater" 
                              class="product-image w-full h-full object-cover transition-transform duration-500">
                         <div class="absolute top-4 right-4 bg-white/90 px-3 py-1 text-xs font-sans tracking-widest text-mountain-green uppercase">New Arrival</div>
@@ -279,7 +278,7 @@
                 <!-- Product 2 -->
                 <div class="product-card carousel-item">
                     <div class="relative overflow-hidden">
-                        <img src="https://images.asos-media.com/products/asos-design-rolled-edge-short-sleeve-cardigan-in-toffee/209268706-1-toffee?$n_640w$&wid=513&fit=constrain" 
+                        <img src="imgs/209268706-1-toffee.avif"
                              alt="Quartz Mountain Watch" 
                              class="product-image w-full h-full object-cover transition-transform duration-500">
                     </div>
@@ -297,7 +296,7 @@
                 <!-- Product 3 -->
                 <div class="product-card carousel-item">
                     <div class="relative overflow-hidden">
-                        <img src="https://images.asos-media.com/products/asos-design-tailored-high-waist-culotte-trousers-in-brown/210004535-1-brown?$n_640w$&wid=513&fit=constrain" 
+                        <img src="imgs/513885254_30708162765464328_2399542604455663209_n.jpg" 
                              alt="Summit Leather Boots" 
                              class="product-image w-full h-full object-cover transition-transform duration-500">
                         <div class="absolute top-4 right-4 bg-white/90 px-3 py-1 text-xs font-sans tracking-widest text-mountain-green uppercase">Limited</div>
@@ -316,7 +315,7 @@
                 <!-- Product 4 -->
                 <div class="product-card carousel-item">
                     <div class="relative overflow-hidden">
-                        <img src="https://images.asos-media.com/products/mango-tailored-collarless-jacket-in-brown/210191906-1-brown?$n_640w$&wid=513&fit=constrain" 
+                        <img src="imgs/487462974_29535791239368159_5239406415612499299_n.jpg" 
                              alt="Wildflower Pendant" 
                              class="product-image w-full h-full object-cover transition-transform duration-500">
                     </div>
@@ -334,7 +333,7 @@
                 <!-- Product 5 -->
                 <div class="product-card carousel-item">
                     <div class="relative overflow-hidden">
-                        <img src="https://images.asos-media.com/products/dragon-diffusion-santa-croce-big-woven-leather-bag-in-natural/209527573-1-cream?$n_640w$&wid=513&fit=constrain" 
+                        <img src="imgs/592753084_33214135081533738_391074175577860906_n.jpg" 
                              alt="Forest Silk Scarf" 
                              class="product-image w-full h-full object-cover transition-transform duration-500">
                     </div>
@@ -352,15 +351,15 @@
                 <!-- Product 6 -->
                 <div class="product-card carousel-item">
                     <div class="relative overflow-hidden">
-                        <img src="https://images.asos-media.com/products/dragon-diffusion-h-salvage-woven-leather-shoulder-bag-in-khaki-green/209527567-1-midgreen?$n_640w$&wid=513&fit=constrain" 
+                        <img src="imgs/592474380_33214136654866914_8872906119258679884_n.jpg" 
                              alt="Pine Candle Collection" 
                              class="product-image w-full h-full object-cover transition-transform duration-500">
                         <div class="absolute top-4 right-4 bg-white/90 px-3 py-1 text-xs font-sans tracking-widest text-mountain-green uppercase">Gift</div>
                     </div>
                     <div class="p-2">
-                        <h3 class="font-serif text-xl text-forest mb-2">Pine Candle Collection</h3>
+                        <h3 class="font-sans text-lg mb-6">Pine Candle Collection</h3>
                         <div class="flex justify-between items-center">
-                            <span class="font-sans text-lg mb-6">$68</span>
+                            <span class="font-bold text-xl text-gray-500">$68</span>
                             <button onclick="openInquiry('Pine Candle Collection')" class="text-xs font-sans tracking-widest uppercase text-mountain-green border-b-2 border-rose-gold pb-1 hover:text-rose-gold transition-colors">
                                 Inquire
                             </button>
@@ -370,6 +369,10 @@
             </div>
         </div>
     </section>
+
+
+
+
 
 
 
@@ -401,7 +404,7 @@
                                 <i data-lucide="map-pin" class="w-5 h-5 text-white"></i>
                             </div>
                             <div>
-                                <h4 class="font-serif text-lg mb-1">Location</h4>
+                                <h4 class="font-sans text-lg mb-1">Location</h4>
                                 <p class="font-sans text-gray-300 text-sm">307 East Main St<br>Red River, NM</p>
                             </div>
                         </div>
@@ -411,7 +414,7 @@
                                 <i data-lucide="clock" class="w-5 h-5 text-white"></i>
                             </div>
                             <div>
-                                <h4 class="font-serif text-lg mb-1">Hours</h4>
+                                <h4 class="font-sans text-lg mb-1">Hours</h4>
                                 <p class="font-sans text-gray-300 text-sm">Mon - Sun:<br>9:00 AM - 7:00 PM</p>
                             </div>
                         </div>
@@ -421,7 +424,7 @@
                                 <i data-lucide="phone" class="w-5 h-5 text-white"></i>
                             </div>
                             <div>
-                                <h4 class="font-serif text-lg mb-1">Contact</h4>
+                                <h4 class="font-sans text-lg mb-1">Contact</h4>
                                 <p class="font-sans text-gray-300 text-sm">575-754-1756<br>rrclimates.hotmail.com</p>
                             </div>
                         </div>
@@ -430,26 +433,26 @@
                 
                 <!-- Contact Form -->
                 <div class="bg-white/10 backdrop-blur-sm p-8 rounded-lg border border-white/20">
-                    <h3 class="font-serif text-2xl mb-6">Inquire About an Item</h3>
+                    <h3 class="font-sans text-2xl mb-6">Inquire About an Item</h3>
                     <form onsubmit="handleFormSubmit(event)" class="space-y-6">
                         <div>
                             <label class="block font-sans text-xs tracking-widest uppercase text-gray-300 mb-2">Your Name</label>
-                            <input type="text" required 
+                            <input id="formName" type="text" required 
                                    class="w-full bg-white/5 border border-white/20 px-4 py-3 text-white placeholder-gray-400 focus:outline-none focus:border-rose-gold-light transition-colors">
                         </div>
                         <div>
                             <label class="block font-sans text-xs tracking-widest uppercase text-gray-300 mb-2">Email</label>
-                            <input type="email" required 
+                            <input id="formEmail" type="email" required 
                                    class="w-full bg-white/5 border border-white/20 px-4 py-3 text-white placeholder-gray-400 focus:outline-none focus:border-rose-gold-light transition-colors">
                         </div>
                         <div>
                             <label class="block font-sans text-xs tracking-widest uppercase text-gray-300 mb-2">Item of Interest</label>
-                            <input type="text" id="item-input" placeholder="e.g., Alpine Cashmere Sweater" 
+                            <input id="formItem" type="text" placeholder="e.g., Alpine Cashmere Sweater" 
                                    class="w-full bg-white/5 border border-white/20 px-4 py-3 text-white placeholder-gray-400 focus:outline-none focus:border-rose-gold-light transition-colors">
                         </div>
                         <div>
                             <label class="block font-sans text-xs tracking-widest uppercase text-gray-300 mb-2">Message</label>
-                            <textarea rows="4" 
+                            <textarea id="formMessage" rows="4" 
                                       class="w-full bg-white/5 border border-white/20 px-4 py-3 text-white placeholder-gray-400 focus:outline-none focus:border-rose-gold-light transition-colors"></textarea>
                         </div>
                         <button type="submit" 
@@ -457,6 +460,7 @@
                             Send Inquiry
                         </button>
                     </form>
+
                 </div>
             </div>
         </div>
@@ -501,57 +505,5 @@
     </div>
 
     <script src="https://unpkg.com/lucide@latest"></script>
-        <script>
-        // Initialize Lucide icons
-        lucide.createIcons();
-
-        // Navbar scroll effect
-        window.addEventListener('scroll', () => {
-            const navbar = document.getElementById('navbar');
-            if (window.scrollY > 50) {
-                navbar.classList.add('shadow-sm');
-            } else {
-                navbar.classList.remove('shadow-sm');
-            }
-        });
-
-        // Open inquiry with pre-filled item
-        function openInquiry(itemName) {
-            const input = document.getElementById('item-input');
-            if (input) {
-                input.value = itemName;
-            }
-            document.getElementById('visit').scrollIntoView({ behavior: 'smooth' });
-            // Highlight the input
-            setTimeout(() => {
-                input.focus();
-                input.parentElement.classList.add('animate-pulse');
-                setTimeout(() => input.parentElement.classList.remove('animate-pulse'), 1000);
-            }, 800);
-        }
-
-        // Handle form submission
-        function handleFormSubmit(e) {
-            e.preventDefault();
-            // Show success modal
-            document.getElementById('success-modal').classList.remove('hidden');
-            document.getElementById('success-modal').classList.add('flex');
-            // Reset form
-            e.target.reset();
-        }
-
-        // Close modal
-        function closeModal() {
-            document.getElementById('success-modal').classList.add('hidden');
-            document.getElementById('success-modal').classList.remove('flex');
-        }
-
-        // Close modal on backdrop click
-        document.getElementById('success-modal').addEventListener('click', (e) => {
-            if (e.target === e.currentTarget) {
-                closeModal();
-            }
-        });
-    </script>
 </body>
 </html>
